--- a/YiRenDai/Info.plist
+++ b/YiRenDai/Info.plist
@@ -28,6 +28,14 @@
 				<string>wx0e24ffb7d515f749</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.zykj.YiRenDai</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
